--- a/src/partials/whitepaper-link.html
+++ b/src/partials/whitepaper-link.html
@@ -1,6 +1,5 @@
-<a
-   class="inline-block text-tiny leading-loose px-6 rounded-lg border-white border cursor-pointer transition-transform duration-100 transform scale-100  hover:scale-105">
-
+<button
+        class="scroll-bottom inline-block text-tiny leading-loose px-6 rounded-lg border-white border cursor-pointer transition-transform duration-100 transform scale-100  hover:scale-105">
     <svg class="fill-current h-4 w-4 inline"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="-2 -2 24 24"
@@ -13,4 +12,4 @@
         </path>
     </svg>
     Corona News
-</a>
+</button>
