logo animation classes

--- a/src/partials/01_home.html
+++ b/src/partials/01_home.html
@@ -15,4 +15,5 @@
     <div class="lg:hidden pt-16">
         <include src="whitepaper-link.html"></include>
     </div>
+    <div class="w-10 lg:w-16"></div>
 </section>
