--- a/src/partials/06_form.html
+++ b/src/partials/06_form.html
@@ -17,10 +17,8 @@
                 Jetzt schon <b class="font-bold">neugierig</b>?
             </div>
             <p class="max-w-lg ml-auto text-blue-500">
-                Dann erfahre als einer der ersten alle Details über gettup und melde Dich für
-                unseren Newsletter an. <br>
-                Einfach E-Mail-Adresse eintragen und schon geht´s los. Als Dankeschön versorgen wir Dich ab sofort und
-                regelmäßig mit hilfreichen Infos zu den geplanten Corona Staatshilfen für gemeinnützige Organisationen.
+                Unser Newsletter informiert über aktuelle <b>Corona Hilfsangebote</b> und gibt einen Einblick in den
+                derzeitigen Stand der gettup Plattform.
             </p>
             <iframe class="mj-w-res-iframe"
                     frameborder="0"
